; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_blockframe.c_get_frame_block.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_blockframe.c_get_frame_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block = type { i32 }
%struct.frame_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.block* @get_frame_block(%struct.frame_info* %0, i32* %1) #0 {
  %3 = alloca %struct.frame_info*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.frame_info* %0, %struct.frame_info** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.frame_info*, %struct.frame_info** %3, align 8
  %7 = call i32 @get_frame_address_in_block(%struct.frame_info* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = load i32*, i32** %4, align 8
  store i32 %11, i32* %12, align 4
  br label %13

13:                                               ; preds = %10, %2
  %14 = load i32, i32* %5, align 4
  %15 = call %struct.block* @block_for_pc(i32 %14)
  ret %struct.block* %15
}

declare dso_local i32 @get_frame_address_in_block(%struct.frame_info*) #1

declare dso_local %struct.block* @block_for_pc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
